# sigstore-verification

./: .rubocop.yml  Gemfile  README.md  parse_tests.yml  policy.sigstore-error.kdl  policy.sigstore.kdl  sigstore-policy.kdl  sigstore-verification.gemspec
lib/: rubygems_plugin.rb
lib/sigstore/: verification.rb
lib/sigstore/verification/: kdl_parser.rb  policy.rb  rubygems_plugin.rb  version.rb
rs/: Cargo.toml  main.rs
sig/sigstore/: verification.rbs
spec/: spec_helper.rb
spec/sigstore/: parser_builder_spec.rb  verification_spec.rb
