[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdl = "4.6.0"
miette = { version = "5.1.0", features = ["fancy"] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[[bin]]
name = "rs"
path = "main.rs"
